<resources>
    <string name="app_name">Beets</string>
    <string name="logo">BEETS</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="red">red</string>
    <string name="blue">blue</string>
    <string name="firstSlideText">To start the game, press the play button to start the song</string>
    <string name="secondSlideText">Put down your phone in your pocket and start walking</string>
    <string name="thirdSlideText">Follow the beat in the song to score points</string>
    <string name="fourthSlideText">The phone vibrates to give you feedback on how good you are doing</string>

    <string name="pick_song">Pick a song to play!</string>
    <string name="bpm">BPM</string>
    <string name="song_length">Song Length</string>
    <string name="exit">Exit</string>
    <string name="startgame">Start Game</string>
    <string name="highscore">High Score</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
