<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.github.beetsbyninn.beets.MenyFragment">

    <TextView
        android:text="@string/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="84dp"
        android:textColor="#ef6c00"
        android:id="@+id/tvBeets"
        android:layout_marginTop="102dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/buttonStartGame"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBeets"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:text="@string/startgame"

        />

    <Button
        android:id="@+id/buttonHighScore"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/buttonStartGame"
        android:layout_below="@+id/buttonStartGame"
        android:text="@string/highscore"


        />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="150dp"

        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/buttonHighScore"
        android:layout_below="@+id/buttonHighScore"
        android:text="@string/exit"

        />


</RelativeLayout >
