<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SongListFragment">

    <TextView
        android:text="@string/pick_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_title"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_margin="20dp"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/bpm_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/tv_title"
        android:layout_marginEnd="33dp"
        android:gravity="center"
        android:text="@string/bpm"
        android:textAlignment="center"
        android:textColor="@color/colorGood"
        android:textSize="10sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/song_length_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_title"
        android:layout_alignEnd="@+id/bpm_color"
        android:gravity="center"
        android:text="@string/song_length"
        android:textAlignment="center"
        android:textColor="@color/selectedDot"
        android:textSize="10sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:id="@+id/view1"
        android:background="?attr/colorButtonNormal"
        android:minHeight="1px"
        android:layout_below="@+id/tv_title"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/list_view"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/view1" />

</RelativeLayout>